# chemflow

./: .env  .env.example  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  Requerimientos.md  boceto.md  check_deps.sh  cobertura.xml  coverage.sh  dev_db.sh  lint_all.sh  posiblefuncionamientos  requerimientos.md  run.sh  test_all.sh
.github/workflows/: ci.yml
chemengine/: cargo.toml  requirements.txt  setup-python.sh
chemengine/python/: rdkit_wrapper.py
chemengine/src/: core.rs  lib.rs
crates/chem-adapters/: Cargo.toml  README.md
crates/chem-cli/: Cargo.toml
crates/chem-cli/src/: main.rs
crates/chem-core/: Cargo.toml  readme.md
crates/chem-domain/: Cargo.toml
crates/chem-engine/: .env  Cargo.toml  requirements.txt  setup-python.sh
crates/chem-engine/python/: rdkit_wrapper.py
crates/chem-engine/src/: core.rs  lib.rs
crates/chem-infra/: Cargo.toml
crates/chem-persistence/: Cargo.toml  README.md
crates/chem-persistence/migrations/0001_event_log/: down.sql  up.sql
crates/chem-persistence/migrations/0001_init/: down.sql  up.sql
crates/chem-persistence/migrations/0002_step_artifacts/: down.sql  up.sql
crates/chem-persistence/migrations/0003_property_preference_event/: down.sql  up.sql
crates/chem-persistence/migrations/0004_retry_events/: down.sql  up.sql
crates/chem-persistence/migrations/0005_step_execution_errors/: down.sql  up.sql
crates/chem-persistence/migrations/0006_workflow_branches/: down.sql  up.sql
crates/chem-persistence/src/: config.rs  error.rs  lib.rs  migrations.rs  schema.rs
crates/chem-persistence/src/pg/: mod.rs
crates/chem-persistence/tests/: README.md  artifact_dedup.rs  branch_and_recover.rs  branching_db.rs  branching_declarative.rs  branching_rehydrate.rs  connection_tests.rs  engine_fingerprint.rs  error_persistence.rs  event_parity.rs  event_roundtrip_variants.rs  event_type_constraint.rs  migration_smoke.rs  minimal_pool.rs  policy_event_translation.rs  seq_integrity.rs  stress.rs  teardown.rs  test_support.rs  validate_f8.rs  validate_f9.rs
crates/chem-policies/: Cargo.toml  README.md
crates/chem-providers/: Cargo.toml
documentation/: 00-02-intro-arquitectura.md  03-dominio-modelo.md  04-mapeo-dominio-core-bd.md  05-09-core-fingerprint-eventos.md  10-11-branching-retry-human-gate.md  12-14-esquema-bd-rendimiento-recovery.md  15-step-ejemplo.md  16-adaptadores-providers.md  17-19-formal-riesgos-e2e.md  20-auditoria-trazabilidad.md  21-22-evolucion-extensiones.md  23-workspace-estructura.md  24-secuencia-implementacion.md  README.md  diagramas-final.md
documentation/scripts/: split_diagramas.sh
documentation/snapshots/: README.md  schema_f3.sql  schema_f5.sql  schema_f6.sql
documentation/tareas/: tarea1.md  tarea10.md  tarea2.md  tarea3.md  tarea4.md  tarea4.txt  tarea5.md  tarea5.txt  tarea6.md  tarea6.txt  tarea7.md  tarea8.md  tarea8.txt  tarea9.md
examples/: basic_workflow.toml
migrations/: 0001_init.sql  0002_relationships.sql  0003_properties_and_results.sql  0004_molecules.sql  0006_parameter_hash_and_freeze.sql  0007_step_results_type.sql  0008_providers_used_gin_index.sql  0009_property_provenance.sql  0010_deprecate_source_provider.sql
postgress-docker/: compose.yaml
scripts/: dump_schema.sh  fix_event_type_check.sh
src/: config.rs  lib.rs  main.rs  molecule.rs
tests/: freeze_family_usage.rs  integration_db_persist.rs  integration_postgres.rs  integration_provenance.rs  multi_properties_and_filter.rs  usage_dead_code.rs
(+116 files in other folders)
