[package]
name = "chemflow-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
dashmap = "6.1"
indexmap = "2.11"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
once_cell = "1.19"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
cargo-tarpaulin = "0.32" # Última versión estable
grcov = "0.10"            # Para cobertura avanzada
