[package]
name = "chem-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chem-cli"
path = "src/main.rs"

[dependencies]
chem-core = { path = "../chem-core" }
chem-domain = { path = "../chem-domain" }
uuid = { version = "1.8", features = ["v4", "serde"] }
chem-persistence = { path = "../chem-persistence" }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
