[package]
name = "chem-persistence"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Desactiva la inserción de artifacts (para aislar posibles segfaults en tests)
no-artifact-insert = []

[dependencies]
chem-core = { path = "../chem-core" }
chem-domain = { path = "../chem-domain" }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dotenvy = "0.15"
r2d2 = "0.8"
once_cell = "1.19"
log = "0.4"
